<resources>
    <string name="app_name">AndroidPlayground</string>
    <string name="Button">Button</string>
    <string name="ButtonA">Click A</string>
    <string name="ButtonB">Click B</string>
    <string name="ButtonC">Click C</string>
    <string name="Toast_Button">Toast</string>
    <string name="Count_Button">Count</string>
    <string name="Random_Button">Random</string>
    <string name="Edit_text">Input</string>
    <string name="Text_view">0</string>
    <string name="Image_view">ImageView</string>
    <string name="Text_view1">Random Number :</string>
    <string name="Text_view2">R</string>
    <string name="Switch">Switch</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
