<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/editText2"
        android:layout_width="324dp"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:ems="10"
        android:hint="@string/Button"
        android:inputType="textPersonName"
        android:text="@string/Edit_text" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="284dp"
        android:layout_height="38dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="114dp"
        android:text="@string/Text_view" />

    <Button
        android:id="@+id/button10"
        android:layout_width="158dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="184dp"
        android:text="@string/Button" />

    <Button
        android:id="@+id/button11"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/button10"
        android:layout_marginStart="-142dp"
        android:layout_marginLeft="-142dp"
        android:layout_toEndOf="@+id/textView"
        android:layout_toRightOf="@id/textView"
        android:text="@string/Button" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="327dp"
        android:layout_height="254dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="7dp"
        android:contentDescription="@string/Image_view"
        app:srcCompat="@android:color/holo_orange_light" />
</RelativeLayout>
