<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="280dp"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:paddingTop="10dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:ems="10"
            android:hint="@string/Button"
            android:inputType="textPersonName"
            android:text="@string/Edit_text"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/Text_view"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            style="?attr/buttonBarButtonStyle"
            android:layout_width="163dp"
            android:layout_height="60dp"
            android:text="@string/Button"
            android:textAllCaps="false"
            android:textSize="15sp" />

        <Space
            android:layout_width="10dp"
            android:layout_height="1dp">
        </Space>

        <Button
            style="?attr/buttonBarButtonStyle"
            android:layout_width="163dp"
            android:layout_height="60dp"
            android:text="@string/Button"
            android:textAllCaps="false"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>

